@@ -56,6 +56,7 @@ if (isset($_REQUEST["action"]) && $_REQUEST["action"] == "zoom") {
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
 	<title><?php echo draw_navigation_text("title");?></title>
 	<?php
 	if (isset($_SESSION["custom"]) && $_SESSION["custom"] == true) {
